internal/translate/testdata/multiple-hosts/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: a
  namespace: default
spec:
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: b
  namespace: default
spec:
  ports:
    - port: 8080
